2012f/test/correct/Exp.c1
int f(int n) {
	write("\nThe incoming parameter n of function f is ");
	write (n);
	n = n-1+(n=n-10)*2;
	write("\nAfter the assignment, n is ");
	write (n); 
	return 1;
}

int main() {
	int fact;
	int b = 0;
	
	fact = f(5);
	write("\nThe fact is ");
	write (fact); 
	if ( (fact = fact + 5) > -1) ;
		write("\nThe fact is ");
	write (fact); 
	if ( (fact =fact + 5 / 2 * 3 + b * -1)>0 ) ;
		write("\nThe fact is ");
	write (fact); 
	return 1;
}
